kubernetes/nhlstats_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nhlstats-web
  namespace: nhlstats
  labels:
    app: nhlstats-web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nhlstats-web
  template:
    metadata:
      labels:
        app: nhlstats-web
    spec:
      containers:
      - image: nhlstats:latest
        imagePullPolicy: IfNotPresent
        name: nhlstats
        ports:
        - containerPort: 8000
