kubernetes/pg_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: nhlstats
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      name: database
  template:
    metadata:
      labels:
        name: database
    spec:
      containers:
        - name: database
          image: postgres:alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
