kubernetes/pg_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: nhlstats
  labels:
    name: database
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
  selector:
    name: database
